<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            paddingBottomSystemWindowInsets="@{true}"
            paddingLeftSystemWindowInsets="@{true}"
            paddingRightSystemWindowInsets="@{true}"
            paddingTopSystemWindowInsets="@{true}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backdrop_login">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/enterTitle"
                style="@style/BaseTextAppearance.Headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_side_padding"
                android:layout_marginTop="45dp"
                android:text="@string/login_enter_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailWrapper"
                style="@style/BaseTextInput"
                android:layout_width="0dp"
                android:layout_height="@dimen/large_control_height"
                android:layout_marginHorizontal="@dimen/default_side_padding"
                android:layout_marginTop="@dimen/default_double_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enterTitle">

                <ru.ktsstudio.feature_auth.utils.OutlinedEditText
                    android:id="@+id/emailInput"
                    style="@style/BaseTextAppearance.AppTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_outlined_input"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/default_double_padding"
                    android:paddingEnd="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/emailError"
                style="@style/BaseTextAppearance.Error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_side_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailWrapper"
                tools:text="email error" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordWrapper"
                style="@style/BaseTextInput"
                android:layout_width="0dp"
                android:layout_height="@dimen/large_control_height"
                android:layout_marginHorizontal="@dimen/default_side_padding"
                android:layout_marginTop="@dimen/default_double_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailError"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/alto">

                <ru.ktsstudio.feature_auth.utils.OutlinedEditText
                    android:id="@+id/passwordInput"
                    style="@style/BaseTextAppearance.AppTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_outlined_input"
                    android:hint="@string/login_password_hint"
                    android:imeOptions="actionDone|flagNoExtractUi"
                    android:inputType="textPassword|textNoSuggestions"
                    android:paddingStart="@dimen/default_double_padding"
                    android:paddingEnd="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/passwordError"
                style="@style/BaseTextAppearance.Error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_side_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordWrapper"
                tools:text="password error" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                style="@style/AppTextButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/large_control_height"
                android:layout_marginHorizontal="@dimen/default_side_padding"
                android:layout_marginTop="@dimen/default_side_padding"
                android:text="@string/login_enter"
                app:backgroundTint="@color/button_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordError"
                app:layout_constraintWidth_max="500dp" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="@dimen/default_double_padding"
                android:layout_marginEnd="@dimen/default_triple_padding"
                android:theme="@style/TintedProgress"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/submitButton"
                app:layout_constraintEnd_toEndOf="@id/submitButton"
                app:layout_constraintTop_toTopOf="@id/submitButton"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/errorMessage"
                style="@style/BaseTextAppearance.Error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_side_padding"
                android:layout_marginTop="@dimen/default_double_padding"
                android:gravity="center_horizontal"
                android:text="@string/login_incorrect_credentials"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submitButton"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>